--- a/src/WebApplication9/Views/Category/Index.cshtml
+++ b/src/WebApplication9/Views/Category/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication9.Models.Category>
+﻿@*@model IEnumerable<WebApplication9.Models.Category>*@
 @*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
