--- a/src/WebApplication9/wwwroot/views/categoryView.html
+++ b/src/WebApplication9/wwwroot/views/categoryView.html
@@ -15,7 +15,7 @@
     </div>
     <div class="text-danger" ng-show="vm.errorMessage">{{vm.errorMessage}}</div>
     <div ng-show="vm.isBusy" class="text-danger text-center"><i class="fa fa-spinner fa-spin"></i>Loading...</div>
-    <wait-cursor display-when="true"></wait-cursor>
+    <wait-cursor display-when=""></wait-cursor>
    
     <!-- Modal -->
     <div class="modal fade" id="CategoryForm" role="dialog">
